# LUMI

./: .clang-format  .clang-tidy  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  format.yml
automated/: check.sh  check_fix.sh  format.sh  format_fix.sh
ci/: build.sh  clang-format.sh  clang-tidy.sh
docs/: implementation.md  implementationn.md
src/: error.c  error.h  main.c
src/commands/: help.c  help.h  new.c  new.h  version.c  version.h
src/osal/: osal.h  unix.c
